[gd_scene load_steps=11 format=3 uid="uid://ueq7vy6pfjou"]

[ext_resource type="Script" path="res://Scenes/Level4.gd" id="1_ofw3d"]
[ext_resource type="FontFile" uid="uid://bvepmbfm1dytu" path="res://Assets/Fonts/TCM_____.TTF" id="2_7cvxw"]
[ext_resource type="PackedScene" uid="uid://msr42fg3peff" path="res://Scenes/TurnMarker.tscn" id="2_oxm5y"]
[ext_resource type="Theme" uid="uid://c840ow6okr33r" path="res://Themes/GUI_Default.tres" id="3_ybgpg"]
[ext_resource type="PackedScene" uid="uid://dxdnc7jngsb0o" path="res://Scenes/EnviroIceCream.tscn" id="4_1xvgj"]
[ext_resource type="PackedScene" uid="uid://ceq8u62gbl5kk" path="res://Scenes/Character4.tscn" id="5_fj7h1"]
[ext_resource type="PackedScene" uid="uid://cu8cq40i7724o" path="res://Scenes/MapDQ4.tscn" id="6_wa3ox"]

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.329412, 0.384314, 0.505882, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.670588, 0.0588235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="10"]
Panel/styles/panel = SubResource("9")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gk0mc"]
content_margin_left = 16.0
content_margin_top = 16.0

[node name="Level4" type="Node3D"]
script = ExtResource("1_ofw3d")
board_size = Vector2(7, 7)

[node name="CameraRig" type="Marker3D" parent="."]
transform = Transform3D(0.707107, -0.241845, 0.664463, 0, 0.939693, 0.34202, -0.707107, -0.241845, 0.664463, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
size = 10.0

[node name="PoemTextInWorld" type="Label3D" parent="CameraRig/Camera3D"]
transform = Transform3D(0.707107, 0, -0.707107, -0.241845, 0.939693, -0.241845, 0.664463, 0.34202, 0.664463, 0, 0, -80)
visible = false
pixel_size = 0.1
offset = Vector2(-200, 200)
billboard = 1
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "That that lifelike
eyeball hologram you
commute through faces
you both ways
without turning to?"
font = ExtResource("2_7cvxw")
font_size = 64
horizontal_alignment = 0

[node name="TurnMarker" parent="." instance=ExtResource("2_oxm5y")]

[node name="Panel" type="Panel" parent="."]
offset_right = 250.0
offset_bottom = 230.0
mouse_filter = 2
theme = SubResource("10")

[node name="GUI" type="HBoxContainer" parent="."]
offset_right = 249.0
offset_bottom = 228.0
mouse_filter = 2
theme = ExtResource("3_ybgpg")
alignment = 1

[node name="Right" type="VBoxContainer" parent="GUI"]
custom_minimum_size = Vector2(250, 230)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PlayerOptions" type="VBoxContainer" parent="GUI/Right"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
text = "It is Derp's turn"
horizontal_alignment = 1

[node name="Read" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Read"

[node name="Walk" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
text = "Move"

[node name="PickUp" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Pick Up"

[node name="Throw" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
text = "Throw"

[node name="Wait" type="Button" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wait"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Right/PlayerOptions"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 7
text = "Pause during all turns "

[node name="CheckButton" type="CheckButton" parent="GUI/Right/PlayerOptions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
text = "Pause during all turns"

[node name="WalkOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/WalkOptions"]
layout_mode = 2
size_flags_horizontal = 4
text = "Choose your destination,
or click \"Cancel\""

[node name="PickUpOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2

[node name="ThrowOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/ThrowOptions"]
layout_mode = 2
size_flags_horizontal = 4
text = "Click your target, 
or \"Cancel\""

[node name="WaitOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="GUI/Right/WaitOptions"]
layout_mode = 2
text = "Wait how long?"

[node name="WaitDuration" type="SpinBox" parent="GUI/Right/WaitOptions"]
layout_mode = 2
min_value = 10.0
max_value = 300.0
step = 10.0
value = 100.0

[node name="PoemLabel" type="RichTextLabel" parent="GUI/Right"]
visible = false
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_gk0mc")
text = "That that lifelike
eyeball hologram you
commute through faces
you both ways
without turning to?"

[node name="ProceedCancel" type="HBoxContainer" parent="GUI/Right"]
visible = false
layout_mode = 2
alignment = 1

[node name="Proceed" type="Button" parent="GUI/Right/ProceedCancel"]
layout_mode = 2
text = "Proceed"

[node name="Cancel" type="Button" parent="GUI/Right/ProceedCancel"]
layout_mode = 2
text = "Cancel"

[node name="WorldEnvironment" parent="." instance=ExtResource("4_1xvgj")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.824707, 0.300371, 0.479204, -0.534501, 0.690879, 0.486821, -0.184845, -0.657619, 0.730321, 8.30672, 3.51017, 9.72209)
visible = false
shadow_enabled = true

[node name="Bill" parent="." instance=ExtResource("5_fj7h1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="Sully" parent="." instance=ExtResource("5_fj7h1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 9)

[node name="Don" parent="." instance=ExtResource("5_fj7h1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 2)

[node name="You" parent="." instance=ExtResource("5_fj7h1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 5)
player = true

[node name="MapDQ4" parent="." instance=ExtResource("6_wa3ox")]

[node name="WallTileFade" parent="MapDQ4/Room1" index="24"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.01, 0, 0.5, -0.51)

[connection signal="pressed" from="GUI/Right/PlayerOptions/Read" to="." method="_on_Read_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Walk" to="." method="_on_Walk_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/PickUp" to="." method="_on_PickUp_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Throw" to="." method="_on_Throw_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Wait" to="." method="_on_Wait_pressed"]
[connection signal="toggled" from="GUI/Right/PlayerOptions/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Proceed" to="." method="_on_Proceed_pressed"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Cancel" to="." method="_on_Cancel_pressed"]

[editable path="Bill"]
[editable path="Sully"]
[editable path="Don"]
[editable path="You"]
[editable path="MapDQ4"]
